--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ github_repo: "mumlblog"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://Spstolar.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+# url: "https://Spstolar.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: http://simonstolarczyk.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
