--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,8 @@ url: http://simonstolarczyk.com
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/mumlblog" # the subpath of your site, e.g. "/blog".
+# baseurl: "/mumlblog" # the subpath of your site, e.g. "/blog".
+baseurl: "" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
